--- a/backmount.html
+++ b/backmount.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">隱藏在寧靜社區的質感咖啡廳</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃環境清幽不吵雜</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃戶外寵物友善</mark></p>
+                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃環境清幽不吵雜</mark></p> <mark class="yellow">＃早午餐</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃戶外寵物友善</mark></p> <mark class="yellow">＃簡約北歐風</mark></p>
                     <p> <mark class="blue">Covid-19專區：僅提供外帶，暫停內用服務，所有品項皆可外帶/外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
