--- a/unclestwo.html
+++ b/unclestwo.html
@@ -22,7 +22,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Coppii Lumii living Coffee</h2>
+                    <h2 class="section-heading text-uppercase">Uncles Two 兩位大叔</h2>
                     <h3 class="section-subheading text-muted">我們除了有舒適的環境提供大家喝咖啡配蛋糕，近期還推出了簡餐與炸物讓愛喝酒的大家可以盡情揮發一整天的壓力哦</h3>
                 </div>
                 <div class="text-center">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">工業風搭配木質裝潢低調沉穩又有氣質</div>
+                                <div class="portfolio-caption-subheading text-muted">---</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="coppii_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">冉冉大早餐-小法國 $318</div>
+                                <div class="portfolio-caption-subheading text-muted">---</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">213系列-標準深烘帶著核果香，飽滿濃郁</div>
+                                <div class="portfolio-caption-subheading text-muted">---</div>
                             </div>
                         </div>
                     </div>
