--- a/unclestwo.html
+++ b/unclestwo.html
@@ -23,11 +23,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Uncles Two 兩位大叔</h2>
-                    <h3 class="section-subheading text-muted">我們除了有舒適的環境提供大家喝咖啡配蛋糕，近期還推出了簡餐與炸物讓愛喝酒的大家可以盡情揮發一整天的壓力哦</h3>
+                    <h3 class="section-subheading text-muted">除了有舒適的環境提供大家喝咖啡配蛋糕，近期還推出了簡餐與炸物讓愛喝酒的大家可以盡情揮發一整天的壓力哦</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃安靜不限時</mark>  <mark class="yellow">＃寵物友善</mark>   <mark class="yellow">＃打卡聖地</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃韓系咖啡廳</mark></p>
                     <p> <mark class="blue">Covid-19專區：自主停業至疫情趨緩</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -38,7 +38,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
+                                <img class="img-fluid" src="assets/img/store/uc_1.jpeg" alt="uc_1" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">---</div>
@@ -50,7 +50,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="coppii_2" />
+                                <img class="img-fluid" src="assets/img/store/uc_2.jpeg" alt="uc_2" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">---</div>
@@ -62,7 +62,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
+                                <img class="img-fluid" src="assets/img/store/uc_3.jpeg" alt="uc_3" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">---</div>
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供新鮮好吃的早餐，家常且舒服的暖食，你會想要為朋友外帶杯咖啡，約了久違的同學且自然的分享彼此剛上桌的甜點。一切都將發生在這，想要貼近你的生活。Coppii Lumii期待為你成就很棒的事！</mark>
+                    <p> <mark class="gray">大叔只想提供一個不管是想喝咖啡吃甜點、紓壓喝酒配炸物，還是想來聊天的客人一個舒適的空間，同時我們也是寵物友善餐廳。若您喜歡我們的環境，大叔非常歡迎您來坐坐唷！</mark>
                     </br>
                     
                     </br>
