--- a/unclestwo.html
+++ b/unclestwo.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/uc_1.jpeg" alt="uc_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">---</div>
+                                <div class="portfolio-caption-subheading text-muted">外部裝潢溫馨簡單</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/uc_2.jpeg" alt="uc_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">---</div>
+                                <div class="portfolio-caption-subheading text-muted">泰式綠咖哩雞飯/焗烤肉醬丸子千層麵</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/uc_3.jpeg" alt="uc_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">---</div>
+                                <div class="portfolio-caption-subheading text-muted">店內的佈置放鬆、慵懶</div>
                             </div>
                         </div>
                     </div>
