--- a/index.html
+++ b/index.html
@@ -385,16 +385,12 @@
                                     <p>  <a href=".html" target="_parent">-----</a></p>
                                     </div>
                                     <div>
-                                    <h4>忠孝敦化站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
-                                    </div>
-                                    <div>
                                     <h4>忠孝復興站</h4>
                                     <p>  <a href=".html" target="_parent">-----</a></p>
                                     </div>
                                     <div>
                                     <h4>忠孝新生站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="gin.html" target="_parent">GinGin Coffee Company</a></p>
                                     </div>
                                     <div>
                                     <h4>善導寺站</h4>
