--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                     </div>
                                     <div>
                                     <h4>忠孝新生站</h4>
-                                    <p>  <a href="gin.html" target="_parent">GinGin Coffee Company</a></p>
+                                    <p>  <a href="gingin.html" target="_parent">GinGin Coffee Company</a></p>
                                     </div>
                                     <div>
                                     <h4>善導寺站</h4>
