--- a/gingin.html
+++ b/gingin.html
@@ -26,9 +26,9 @@
                     <h3 class="section-subheading text-muted">白天裡的咖啡餐酒館</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：每日營業時間為0900–1900，僅提供外帶，暫停內用服務</mark>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合聊天聚會</mark></p>
+                    <p> <mark class="yellow">＃早午餐全天供應</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃適合與朋友到訪的咖啡餐酒館</mark></p>
+                    <p> <mark class="blue">Covid-19專區：營業時間09:00-19:00 外送平台：in-line/Uber eats/卡個位</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -38,10 +38,10 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
+                                <img class="img-fluid" src="assets/img/store/gin_1.jpeg" alt="gin_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">工業風搭配木質裝潢低調沉穩又有氣質</div>
+                                <div class="portfolio-caption-subheading text-muted">三塊列日鬆餅搭配自制提拉米蘇 $200</div>
                             </div>
                         </div>
                     </div>
@@ -50,10 +50,10 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="coppii_2" />
+                                <img class="img-fluid" src="assets/img/store/gin_2.jpeg" alt="gin_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">冉冉大早餐-小法國 $318</div>
+                                <div class="portfolio-caption-subheading text-muted">GinGin 跳脫傳統餐酒館的灰暗感，以明亮色調讓空間活躍起來</div>
                             </div>
                         </div>
                     </div>
@@ -62,10 +62,10 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
+                                <img class="img-fluid" src="assets/img/store/gin_3.jpeg" alt="gin_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">213系列-標準深烘帶著核果香，飽滿濃郁</div>
+                                <div class="portfolio-caption-subheading text-muted">品牌 Logo用長頸鹿作為形象，店內充滿巧思</div>
                             </div>
                         </div>
                     </div>
