--- a/gingin.html
+++ b/gingin.html
@@ -83,7 +83,7 @@
                            <p>地址：台北市中正區臨沂街27巷9號</p>
                            <p>電話：（02）2394-0089</p>
                            <p>營業時間：週一至週五 7:30-20:00  六日 8:00-20:00</p>
-                           <p>菜單：<a href="https://www.facebook.com/gingincc/" target="_blank">LINK</a></p>
+                           <p>菜單：<a href="https://www.facebook.com/gingincc/menu/?ref=page_internal" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/gingincc/" target="_blank">LINK</a></p>
                            <p>交通：捷運忠孝新生站五號出口步行約兩分鐘</p>
