--- a/gingin.html
+++ b/gingin.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/gin_2.jpeg" alt="gin_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">跳脫傳統餐酒館的灰暗感，以明亮色調讓空間活躍起來</div>
+                                <div class="portfolio-caption-subheading text-muted">環境明亮，跳脫傳統餐酒館的灰暗感</div>
                             </div>
                         </div>
                     </div>
