--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="..." />
                                     <div>
                                     <h4>西門站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="shang.html" target="_parent">上上咖啡</a></p>
                                     </div>
                                     <div>
                                     <h4>龍山寺站</h4>
