--- a/shang.html
+++ b/shang.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Shang Shang Coffee 上上咖啡</h2>
-                    <h3 class="section-subheading text-muted">  </h3>
+                    <h3 class="section-subheading text-muted">時間帶走青春年華，獨留老咖啡館品回憶</h3>
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/sh_2.jpeg" alt="sh_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">俄式羅宋湯套餐 $260</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/sh_3.jpeg" alt="sh_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">裝潢愜意</div>
                             </div>
                         </div>
                     </div>
