--- a/shang.html
+++ b/shang.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">上上咖啡創立於1978年，至今已30多年， 一路走來堅持用塞風式手煮咖啡，保留咖啡最佳的風味。「機器式操控的咖啡，滿街皆有。傳統手工塞風式的咖啡，卻令人懷念</mark>
                     </br>
                     
                     </br>
