--- a/shang.html
+++ b/shang.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/sh_1.jpeg" alt="sh_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">門口的拱門流露出凝結住時光般的懷舊感</div>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">上上咖啡創立於1978年，至今已30多年， 一路走來堅持用塞風式手煮咖啡，保留咖啡最佳的風味。「機器式操控的咖啡，滿街皆有。傳統手工塞風式的咖啡，卻令人懷念</mark>
+                    <p> <mark class="gray">上上咖啡創立於1978年，至今已30多年， 一路走來堅持用塞風式手煮咖啡，保留咖啡最佳的風味。「機器式操控的咖啡，滿街皆有。傳統手工塞風式的咖啡，卻令人懷念。」</mark>
                     </br>
                     
                     </br>
