--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Location</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#style">Style</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Developer</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -230,9 +230,9 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+                    <h2 class="section-heading text-uppercase">Developer</h2>
                 </div>
-                <div class="center">
+                <div class="text-center">
                     <div class="col-lg-4">
                     <div class="content">
                         <div class="team-member">
