--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 <h4>老饕專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            <p>  西門站 <a href="shang.html" target="_parent">上上咖啡</a></p>
                             </p></div>
                         </div>
                     </li>
