--- a/nisarga.html
+++ b/nisarga.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">老屋咖啡廳裡的老物精神，捨不得離開的好地方</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作、閱讀</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給想品咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃復古咖啡廳</mark>   <mark class="yellow">＃適合工作、閱讀</mark></p>
+                    <p> <mark class="yellow">＃大人系布丁</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給想品咖啡的你</mark></p>
                     <p> <mark class="blue">Covid-19專區：因應疫情暫停營業</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/ng_2.jpeg" alt="ng_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">焦糖布丁 $120 巴斯克乳酪蛋糕 $150</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/ng_3.jpeg" alt="ng_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">店內古老沉穩的寧靜氛圍</div>
                             </div>
                         </div>
                     </div>
