--- a/nisarga.html
+++ b/nisarga.html
@@ -41,8 +41,8 @@
                                 <img class="img-fluid" src="assets/img/store/ng_1.jpeg" alt="ng_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
-                            </div>
+                                <div class="portfolio-caption-subheading text-muted">Nisarga Cafe</div>
+                           </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
