--- a/coppii.html
+++ b/coppii.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：  </mark>
+                    <p> <mark class="blue">Covid-19專區：營業時間09:00-19:00 僅提供外帶，暫停內用服務</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">舒服的木質家具讓整間店散發出優雅氣息</div>
+                                <div class="portfolio-caption-subheading text-muted">挑高的店內以木質溫暖色調呈現慵懶放鬆風格</div>
                             </div>
                         </div>
                     </div>
@@ -86,7 +86,8 @@
                            <p>菜單：<a href="https://www.facebook.com/CoppiiLumii/menu/?ref=page_internal" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/CoppiiLumii/" target="_blank">LINK</a></p>
-                           <p>交通：  </p>
+                           <p>交通：捷運南港軟體園區站1號出口步行約3-5分鐘</p>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.2405749062846!2d121.61258451459786!3d25.059833943410226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ad597033a179%3A0x789a36f1dd24dec2!2zQ29wcGlpIEx1bWlpIGxpdmluZyBjb2ZmZWUg5YaJ5YaJ55Sf5rS7!5e0!3m2!1szh-TW!2stw!4v1623639432741!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            
                            </br>
                            
