--- a/coppii.html
+++ b/coppii.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">挑高的店內以木質溫暖色調呈現慵懶放鬆風格</div>
+                                <div class="portfolio-caption-subheading text-muted">店內以木質溫暖色調呈現慵懶放鬆風格</div>
                             </div>
                         </div>
                     </div>
