--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/test wallpaper.png" alt="..." />
                                     <div>
                                     <h4>南港展覽館站</h4>
-                                    <p>  <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                                    <p>  <a href="coppii.html" target="_parent">CoppiiLumii 冉冉生活</a></p>
                                     </div>
                                     <div>
                                     <h4>南港站</h4>
