--- a/arthere.html
+++ b/arthere.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作與唸書</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃座位都有獨立電燈和插座</mark></p>
                     <p> <mark class="blue">Covid-19專區：僅提供外送，三公里兩份即可免運外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/ar_1.jpeg" alt="ar_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">座位空間舒適</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/ar_2.jpeg" alt="ar_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">經典早午餐 $290</div>
                             </div>
                         </div>
                     </div>
