--- a/arthere.html
+++ b/arthere.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/ar_1.jpeg" alt="ar_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">座位空間舒適</div>
+                                <div class="portfolio-caption-subheading text-muted">保持寬鬆空間的座位擺設</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/ar_3.jpeg" alt="ar_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">挑高讓光線打亮整個空間</div>
                             </div>
                         </div>
                     </div>
