--- a/arthere.html
+++ b/arthere.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">平日供應商業午餐，主要是提供給講究「飽足感」的朋友，大多是燉飯類。若是只是想吃點的小東西，可以選擇輕食三明治或是早午餐系列，選擇可說是非常多樣化。</mark>
                     </br>
                     
                     </br>
