--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
-                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
-                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            <p>  市政府站 <a href="arthere.html" target="_parent">Arthere Cafe' 上樓看看</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -348,6 +347,7 @@
                                     <div>
                                     <h4>市政府站</h4>
                                     <p>  <a href="11cafe.html" target="_parent">11 cafe'</a></p>
+                                    <p>  <a href="arthere.html" target="_parent">Arthere Cafe' 上樓看看</a></p>
                                     </div>
                                 
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
