--- a/monga.html
+++ b/monga.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shang Shang Coffee</title>
+        <title>Monga Coffee</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Shang Shang Coffee 上上咖啡</h2>
+                    <h2 class="section-heading text-uppercase">Monga Coffe 丸花豆倉</h2>
                     <h3 class="section-subheading text-muted">  </h3>
                 </div>
                 <div class="text-center">
