--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                     </div>
                                     <div>
                                     <h4>龍山寺站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="monga.html" target="_parent">丸花豆倉 Monga Coffee</a></p>
                                     </div>
                                     <div>
                                     <h4>江子翠站</h4>
