--- a/monga.html
+++ b/monga.html
@@ -38,7 +38,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _1.jpeg" alt="  _1" />
+                                <img class="img-fluid" src="assets/img/store/mo_1.jpeg" alt="mo_1" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -50,7 +50,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _2.jpeg" alt="  _2" />
+                                <img class="img-fluid" src="assets/img/store/mo_2.jpeg" alt="mo_2" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -62,7 +62,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _3.jpeg" alt="  _3" />
+                                <img class="img-fluid" src="assets/img/store/mo_3.jpeg" alt="mo_3" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -80,12 +80,12 @@
                 
                 <div class="text-center">
                            <h4>Information</h4>
-                           <p>地址：</p>
-                           <p>電話：(02)</p>
-                           <p>營業時間：</p>
-                           <p>菜單：<a href="  " target="_blank">LINK</a></p>
+                           <p>地址：台北市萬華區永福街79號1樓</p>
+                           <p>電話：0970-631-952</p>
+                           <p>營業時間：10:30-18:00(週二公休)</p>
+                           <p>菜單：不定時更新，可私訊FaceBook</p>
                            <p>服務費：不收服務費</p>
-                           <p>粉絲團：<a href="  " target="_blank">LINK</a></p>
+                           <p>粉絲團：<a href="https://www.facebook.com/MongaCoffeeRoasters/" target="_blank">LINK</a></p>
                            <p>交通：  </p>
                            
                            </br>
