--- a/monga.html
+++ b/monga.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Monga Coffe 丸花豆倉</h2>
-                    <h3 class="section-subheading text-muted">  </h3>
+                    <h3 class="section-subheading text-muted">香軟好吃的伯爵茶布蕾 許你一個難忘的午後時光</h3>
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/mo_1.jpeg" alt="mo_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">招牌 倉豆花丸 $70</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/mo_2.jpeg" alt="mo_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">店面的擺飾讓人感到溫馨與溫暖</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/mo_3.jpeg" alt="mo_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">每天簡單的咖啡生活</div>
                             </div>
                         </div>
                     </div>
