--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="..." />
                                     <div>
                                     <h4>國父紀念館站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="aruchuu.html" target="_parent">Aruchuu 麓鳩</a></p>
                                     </div>
                                     <div>
                                     <h4>忠孝敦化站</h4>
