--- a/aruchuu.html
+++ b/aruchuu.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/ac_2.jpeg" alt="ac_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">甜點價錢每款150元</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/ac_3.jpeg" alt="ac_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">老屋改裝少女系咖啡店</div>
                             </div>
                         </div>
                     </div>
@@ -83,9 +83,9 @@
                            <p>地址：台北市松山區光復南路32巷18號</p>
                            <p>電話：(02)2577-3218</p>
                            <p>營業時間：13:00-23:00</p>
-                           <p>菜單：<a href="  " target="_blank">LINK</a></p>
+                           <p>菜單：每日甜點皆不相同</p>
                            <p>服務費：不收服務費</p>
-                           <p>粉絲團：<a href="  " target="_blank">LINK</a></p>
+                           <p>粉絲團：<a href="https://www.facebook.com/cakearuchuu/" target="_blank">LINK</a></p>
                            <p>交通：捷運國父紀念館站1號出口步行約15分鐘</p>
                            台北市松山區光復南路32巷18號｜Google Map
 
