--- a/aruchuu.html
+++ b/aruchuu.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/ac_1.jpeg" alt="ac_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">白素簡約的裝修風格，十分清爽舒適</div>
                             </div>
                         </div>
                     </div>
