--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">信義-萬華</h2>
                                     <p class="item-intro text-muted">捷運國父紀念館站-捷運台北車站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/----.jpg" alt="..." />
                                     <div>
                                     <h4>國父紀念館站</h4>
                                     <p>  <a href="aruchuu.html" target="_parent">Aruchuu 麓鳩</a></p>
@@ -424,7 +424,7 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">萬華-板橋</h2>
                                     <p class="item-intro text-muted">捷運西門站-捷運府中站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
                                     <div>
                                     <h4>西門站</h4>
                                     <p>  <a href="shang.html" target="_parent">上上咖啡</a></p>
@@ -474,13 +474,29 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">板橋-土城</h2>
                                     <p class="item-intro text-muted">捷運亞東醫院站-捷運頂埔站</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>Date: January 2021</li>
-                                        <li>Client: Lines</li>
-                                        <li>Category: Branding</li>
-                                    </ul>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/---.jpg" alt="..." />
+                                    <div>
+                                    <h4>亞東醫院站</h4>
+                                    <p>  <a href="shang.html" target="_parent">---</a></p>
+                                    </div>
+                                    <div>
+                                    <h4>海山站</h4>
+                                    <p>  <a href="monga.html" target="_parent">-----</a></p>
+                                    </div>
+                                    <div>
+                                    <h4>土城站</h4>
+                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    </div>
+                                    <div>
+                                    <h4>永寧站</h4>
+                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    </div>
+                                    <div>
+                                    <h4>頂埔站</h4>
+                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    </div>
+                                    </div>
+                                    
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close Project
