--- a/aruchuu.html
+++ b/aruchuu.html
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供</mark>
+                    <p> <mark class="gray">除了清新的室內空間，麓鳩的咖啡、飲品也都不錯，加上店內還有一隻非常可愛的店貓，很適合在午後或是晚飯後前往，邊喝咖啡邊讀本好書，度過美好的悠閒時光。</mark>
                     </br>
                     
                     </br>
