--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                     </div>
                                     <div>
                                     <h4>忠孝復興站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="boven.html" target="_parent">Boven Cafe 雜誌圖書館</a></p>
                                     </div>
                                     <div>
                                     <h4>忠孝新生站</h4>
