--- a/boven.html
+++ b/boven.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/bv_2.jpeg" alt="bv_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">bv</div>
+                                <div class="portfolio-caption-subheading text-muted">現代工業風設計</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/bv_3.jpeg" alt="bv_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">大片落地窗讓整間店採光非常</div>
                             </div>
                         </div>
                     </div>
