--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                                 <h4>不限時、唸書專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
                             <p>  市政府站 <a href="arthere.html" target="_parent">Arthere Cafe' 上樓看看</a></p>
+                            <p>  忠孝復興站 <a href="boven.html" target="_parent">CBoven Cafe 雜誌圖書館</a></p>
                             </p></div>
                         </div>
                     </li>
