--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                                     <div>
                                     <h4>忠孝新生站</h4>
                                     <p>  <a href="gingin.html" target="_parent">GinGin Coffee Company</a></p>
+                                    <p>  <a href="ganada.html" target="_parent">卡那達咖啡店 카페 가나다</a></p>
                                     </div>
                                     <div>
                                     <h4>善導寺站</h4>
