--- a/ganada.html
+++ b/ganada.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">輕工業韓風咖啡館 低調的舒服感</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合工作、唸書</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃韓系咖啡館</mark></p>
                     <p> <mark class="blue">Covid-19專區：僅提供外帶，暫停內用服務</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -83,11 +83,11 @@
                            <p>地址：台北市中正區臨沂街13巷5號</p>
                            <p>電話：(02)2321-7120</p>
                            <p>營業時間：12:00-21:00 週二公休</p>
-                           <p>菜單：<a href="  " target="_blank">LINK</a></p>
+                           <p>菜單：暫無提供</p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/cafeganada" target="_blank">LINK</a></p>
                            <p>交通：捷運忠孝新生站2號出口步行約三分鐘</p>
-                           
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.755365165438!2d121.52884731459754!3d25.04237484411058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a97b7edb8e5f%3A0xbad145cf4b57d297!2z5Y2h6YKj6YGU5ZKW5ZWh5bqX!5e0!3m2!1szh-TW!2stw!4v1623658126637!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </br>
                            
                            </br>
