--- a/ganada.html
+++ b/ganada.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/gd_1.jpeg" alt="gd_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">店面隱身在熱鬧的忠孝敦化站旁巷子內</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/gd_2.jpeg" alt="gd_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">工業風牆面設計營造出鄉村懷舊風</div>
                             </div>
                         </div>
                     </div>
