--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                                     </div>
                                     <div>
                                     <h4>江子翠站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="coya.html" target="_parent">Coya Coffee</a></p>
                                     </div>
                                     <div>
                                     <h4>新埔站</h4>
