--- a/koya.html
+++ b/koya.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Coya Coffee</title>
+        <title>Koya Coffee</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Coya Coffee</h2>
+                    <h2 class="section-heading text-uppercase">Koya Coffee</h2>
                     <h3 class="section-subheading text-muted">巷弄裡的美味文青日系早午餐</h3>
                 </div>
                 <div class="text-center">
