--- a/koya.html
+++ b/koya.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/cy_1.jpeg" alt="cy_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">以木質桌椅、樸拙無雕飾的水泥牆面為主調</div>
+                                <div class="portfolio-caption-subheading text-muted">以木質桌椅、樸拙的水泥牆面為主調</div>
                             </div>
                         </div>
                     </div>
