--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                     </div>
                                     <div>
                                     <h4>忠孝敦化站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="lost.html" target="_parent">Lost and Found it cafe 失物招領咖啡館</a></p>
                                     </div>
                                     <div>
                                     <h4>忠孝復興站</h4>
