--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                     </div>
                                     <div>
                                     <h4>善導寺站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="simple.html" target="_parent">Simple Kaffa 興波咖啡/a></p>
                                     </div>
                                     <div>
                                     <h4>台北車站</h4>
