--- a/drunk.html
+++ b/drunk.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
-                    <p> <mark class="blue">Covid-19專區：  </mark>
+                    <p> <mark class="blue">Covid-19專區：暫停內用，僅供外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -38,7 +38,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _1.jpeg" alt="  _1" />
+                                <img class="img-fluid" src="assets/img/store/dr_1.jpeg" alt="dr_1" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -50,7 +50,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _2.jpeg" alt="  _2" />
+                                <img class="img-fluid" src="assets/img/store/dr_2.jpeg" alt="dr_2" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -62,7 +62,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/  _3.jpeg" alt="  _3" />
+                                <img class="img-fluid" src="assets/img/store/dr_3.jpeg" alt="dr_3" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">－－</div>
@@ -80,9 +80,9 @@
                 
                 <div class="text-center">
                            <h4>Information</h4>
-                           <p>地址：</p>
-                           <p>電話：(02)</p>
-                           <p>營業時間：</p>
+                           <p>地址：台北市大安區光復南路116巷9號</p>
+                           <p>電話：(02)2731-8787</p>
+                           <p>營業時間：11:00~22:00</p>
                            <p>菜單：<a href="  " target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="  " target="_blank">LINK</a></p>
