--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  昆陽站 <a href="unclestwo.html" target="_parent">Uncles Two 兩位大叔</a></p>
-                            <p>  國父紀念館站 <a href=".html" target="_parent">Drunk Cafe 爛醉咖啡</a>
+                            <p>  國父紀念館站 <a href="drunk.html" target="_parent">Drunk Cafe 爛醉咖啡</a>
                             </p></div>
                         </div>
                     </li>
@@ -396,7 +396,7 @@
                                     </div>
                                     <div>
                                     <h4>善導寺站</h4>
-                                    <p>  <a href="simple.html" target="_parent">Simple Kaffa 興波咖啡/a></p>
+                                    <p>  <a href="simple.html" target="_parent">Simple Kaffa 興波咖啡</a></p>
                                     </div>
                                     <div>
                                     <h4>台北車站</h4>
