--- a/drunk.html
+++ b/drunk.html
@@ -73,7 +73,7 @@
                 <div class="text-center">
                     <h4>About us</h4>
                     <p> <mark class="gray">我們想要提供</mark>
-                    </br>
+                    </br>咖啡廳總共有兩個區域，第一個區域比較暗，但裝潢非常的華麗多變，許多不同的熱帶植物和繽紛的羽毛系裝飾，一踏入就讓人目不轉睛，爛醉咖啡白天是咖啡館、晚上則搖身一變為酒吧，還有大型投影幕可以在世足的期間撥放球賽與大家同樂。
                     
                     </br>
                 </div>
