--- a/drunk.html
+++ b/drunk.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">絕美球型玻璃屋咖啡廳 夜間星空燦爛餐酒館</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合朋友小酌聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃網美打卡聖地</mark></p>
+                    <p> <mark class="yellow">＃適合朋友小酌聚會</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃尖峰時段限時90分鐘</mark></p>
+                    <p> <mark class="yellow">＃餐酒館</mark>  <mark class="yellow">＃造景定期更新</mark>   <mark class="yellow">＃網美打卡聖地</mark></p>
                     <p> <mark class="blue">Covid-19專區：暫停內用，僅供外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
