--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  西門站 <a href="shang.html" target="_parent">上上咖啡</a></p>
+                            <p>  國父紀念館站 <a href="simple.html" target="_parent">Simple Kaffa 興波咖啡</a></p>
                             </p></div>
                         </div>
                     </li>
@@ -330,7 +331,7 @@
                                     </div>
                                     <div>
                                     <h4>南港站</h4>
-                                    <p>  <a href=".html" target="_parent">-----</a></p>
+                                    <p>  <a href="tama.html" target="_parent">tama atelier 玉虫画室</a></p>
                                     </div>
                                     <div>
                                     <h4>昆陽站</h4>
