--- a/tama.html
+++ b/tama.html
@@ -41,7 +41,7 @@
                                 <img class="img-fluid" src="assets/img/store/tm_1.jpeg" alt="tm_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">挑高天花板與寬敞木桌</div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/tm_2.jpeg" alt="tm_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">tm</div>
+                                <div class="portfolio-caption-subheading text-muted">蘭姆酒焦糖布丁 炒麵麵包 咖啡牛奶</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/tm_3.jpeg" alt="tm_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">－－</div>
+                                <div class="portfolio-caption-subheading text-muted">不定期開設繪畫課程</div>
                             </div>
                         </div>
                     </div>
